<resources>
    <string name="app_name">Pray4Me</string>
    <string name="menuInstructions">Please click on any picture below...</string>
    <string name="PrayRequestPageOR">(Step 2) Or... Select one from below</string>
    <string name="PrayRequestPageStep3">(Step 3) Click Done Prayer Request </string>
    <string name="requestInstructions">I need someone to pray for me!</string>
    <string name="prayerChainInstructions">Link people to pray...</string>
    <string name="communityResources">See the community help for you</string>
    <string name="PrayRequestPageTitle">(Step 1) Type in your prayer request</string>
    <string name="prayerChainInstruction">Please Select Prayer Chain</string>
    <string name="CommunityResourceInstruction">Please Select Community Resource</string>
    <string name="trouble">I\'m in trouble, please pray for me.</string>
    <string name="addiction">I have an addiction, please pray for me.</string>
    <string name="cancer">I have cancer, please pray for me.</string>
    <string name="job">Please pray that I can get a job.</string>
    <string name="depressed">I am very depressed, please pray for me.</string>
    <string name="lonely">I am lonely, pray for me to meet someone.</string>
    <string name="spouse">Please pray for my spouse.</string>
    <string name="child">Please pray for my child.</string>
    <string name="parent">Please pray for my parent.</string>
    <string name="finances">Please pray for my finances.</string>
    <string name="example">Tap on sample requests below if applicable.</string>
    <string name="exampleclick">Click examples below</string>
    <string name="Donetext">Done</string>
    <string name="dadtext">Please pray for my Dad</string>
    <string name="momtext">Please pray for my Mother</string>
    <string name="wifetext">Please pray for my wife</string>
    <string name="husbandtext">Please pray for my husband</string>
    <string name="requestisttext">Pray request List</string>
    <string name="prayerrequestlisttext">Prayer request List</string>
    <string name="sendbutton">Send</string>
    <string name="btnBack">Back</string>
    <string name="btnAdd">Add Request</string>
    <string name="btnClear">Clear</string>
    <string name="clear">Clear</string>
    <string name="mtbutton">Clear</string>
    <string name="btnPrayFor">Press to Pray For Others!</string>
    <string name="praySelect">Please Select Request to pray for</string>
    <string name="clickToAdd">Click to add another prayer request</string>
    <string name="title_activity_addcontact_xml">addcontact_xml</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_addcontact">addcontact</string>
</resources>