<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="600dp"
    tools:layout_editor_absoluteX="100dp"
    tools:layout_editor_absoluteY="100dp"
    android:fillViewport="true"
    android:layout_gravity="center_horizontal"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SelectionsJava">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="384dp"
            android:layout_height="38dp"
            android:layout_marginTop="16dp"
            android:text="@string/PrayRequestPageTitle"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/request"
            android:layout_width="383dp"
            android:layout_height="150dp"
            android:ems="10"
            android:gravity="start|top"
            android:background="@drawable/border"
            android:inputType="textMultiLine"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="68dp" />

        <Button
            android:id="@+id/btnAddRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAdd"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="276dp" />

        <Button
            android:id="@+id/btnclear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Clear"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="421dp" />

        <Button
            android:id="@+id/donebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Donetext"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="351dp" />

        <Button
            android:id="@+id/btnSelectToPray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPrayFor"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="488dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>